--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "firebase": "^12.7.0",
     "genshin-db": "^5.2.7",
     "next": "16.1.1",
     "react": "19.2.3",
